fix: add participant bugs
